--- a/data.html
+++ b/data.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Golden Goose</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <h1>Data</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   </body>
 </html>
 
@@ -43,3 +44,27 @@
       </div>
     </div>
   </nav>
+  <main>
+    <div class="row align-items-center">
+      <div class="col-md-4" id="feat-3">
+          <h3>The Magic Behind It All</h3>
+          <p>
+            We use customizable patches that go on the left or right said of your head. Our patches then connect to your hippocampus in your brain, transporting your memories straight into your frame!
+          </p>
+      </div>
+      <div class="col-md-8">
+          <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.Y_MuxWwjYXum76f8yoySvwHaFD?rs=1&pid=ImgDetMain">
+      </div>
+  </div>
+  <br>
+  <div class="row align-items-center">
+    <div class="col-md-4" id="feat-3">
+        <h3>Why You Should Become Our Customer</h3>
+        <p>
+          Here at Golden Goose, we use top notch technology to give our costumers a comfortable and reliable experience with our product. Ear pieces starting at $500 without your customizations.
+        </p>
+    </div>
+    <div class="col-md-8">
+        <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.jcalg_uSUFG83KWy6o37awHaHa?rs=1&pid=ImgDetMain">
+    </div>
+</div>
