--- a/shopping.html
+++ b/shopping.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Golden Goose</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
@@ -45,3 +45,18 @@
       </div>
     </div>
   </nav>
+
+<div class="d-grid gap-2 col-6 mx-auto shoppingbutton">
+  <button type="button" class="btn btn-warning"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
+  Frames
+</button>
+<button type="button" class="btn btn-warning"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
+  Shipping
+</button>
+<button type="button" class="btn btn-warning"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
+  Orders
+</button>
+</div>
