--- a/shopping.html
+++ b/shopping.html
@@ -105,6 +105,7 @@
                             <i class="fa fa-instagram"></i>
                             <i class="fa fa-pinterest"></i>
                             <i class="fa fa-twitter"></i>
+                            <i class+ "fa fa-twitter"></i>
                             <i"></i>
                         </p>
                     </div>
