--- a/aboutus.html
+++ b/aboutus.html
@@ -16,37 +16,93 @@
   </body>
 </html>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
+  <div class="container">
     <a class="navbar-brand" href="#">Golden Goose</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+      aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="d-flex justify-content-start align-items-center">
+        <i class="fas fa-bars"></i>
+      </span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarExample01">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <li class="nav-item active">
+          <a class="nav-link px-3" href="index.html">home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutus.html">About Us</a>
+          <a class="nav-link px-3" href="aboutus.html">about us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="data.html">Data</a>
+          <a class="nav-link px-3" href="data.html">data</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link px-3" href="product.html">product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="product.html">Product</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="shopping.html">Shopping</a>
+          <a class="nav-link px-3" href="shipping.html">shipping</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
+      <ul class="navbar-nav flex-row">
+        <li class="nav-item">
+          <a class="nav-link pe-3" href="#!">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg" viewBox="0 0 16 16">
+              <path d="M8 15a5 5 0 0 1-5-5c0-1.956.69-4.286 1.742-6.12.524-.913 1.112-1.658 1.704-2.164C7.044 1.206 7.572 1 8 1s.956.206 1.554.716c.592.506 1.18 1.251 1.704 2.164C12.31 5.714 13 8.044 13 10a5 5 0 0 1-5 5m0 1a6 6 0 0 0 6-6c0-4.314-3-10-6-10S2 5.686 2 10a6 6 0 0 0 6 6"/>
+            </svg>
+            <i class="bi bi-egg"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link px-3" href="#!">
+            <i class="fa fa-facebook-f"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link ps-3" href="#!">
+            <i class="fa fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
+
+
+  <main>
+    <div class="row align-items-center">
+      <div class="col-md-4" id="feat-3">
+          <h3>Maddy Barnes</h3>
+          <p>
+            We use customizable patches that go on the left or right said of your head. Our patches then connect to your hippocampus in your brain, transporting your memories straight into your frame!
+          </p>
+      </div>
+      <div class="col-md-8">
+          <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.Y_MuxWwjYXum76f8yoySvwHaFD?rs=1&pid=ImgDetMain">
+      </div>
+      <div class="row align-items-center">
+        <div class="col-md-4" id="feat-3">
+            <h3>Ella Mayo</h3>
+            <p>
+              We use customizable patches that go on the left or right said of your head. Our patches then connect to your hippocampus in your brain, transporting your memories straight into your frame!
+            </p>
+        </div>
+        <div class="col-md-8">
+            <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.Y_MuxWwjYXum76f8yoySvwHaFD?rs=1&pid=ImgDetMain">
+        </div>
+  </div>
+  <br>
+  <div class="row align-items-center">
+    <div class="col-md-4" id="feat-3">
+        <h3>Alexa Mata</h3>
+        <p>
+          Here at Golden Goose, we use top notch technology to give our costumers a comfortable and reliable experience with our product. Ear pieces starting at $500 without your customizations.
+        </p>
+    </div>
+    <div class="col-md-8">
+        <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.jcalg_uSUFG83KWy6o37awHaHa?rs=1&pid=ImgDetMain">
+    </div>
+</div>
 <footer>
   <div class="container">
       <div class="row">
