--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootstrap 5 footer design</title>
+    <title>Golden Goose</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -17,42 +17,59 @@
   </head>
 
   <header>
-   <h1>Home</h1>
+   <h1>Golden Goose</h1>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </header>
 
-
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
+    <div class="container">
       <a class="navbar-brand" href="#">Golden Goose</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="d-flex justify-content-start align-items-center">
+          <i class="fas fa-bars"></i>
+        </span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <li class="nav-item active">
+            <a class="nav-link px-3" href="index.html">home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">About Us</a>
+            <a class="nav-link px-3" href="aboutus.html">about us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
+            <a class="nav-link px-3" href="data.html">data</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link px-3" href="product.html">product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="product.html">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="shopping.html">Shopping</a>
+            <a class="nav-link px-3" href="shipping.html">shipping</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+  
+        <ul class="navbar-nav flex-row">
+          <li class="nav-item">
+            <a class="nav-link pe-3" href="#!">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3" href="#!">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ps-3" href="#!">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
+  
   <br>
    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,7 +103,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://th.bing.com/th/id/OIP.ZpWYgUW3zQG4pHtOHv472wHaFj?rs=1&pid=ImgDetMain" class="poop" class="d-block w-100" alt="...">
+      <img src="C:\Users\Ella.Mayo\Downloads\Image.jpg" class="poop" class="d-block w-100">
       <div class="carousel-caption d-none d-md-block">
        
       </div>
@@ -157,7 +174,7 @@
                             <i class="fa fa-instagram"></i>
                             <i class="fa fa-pinterest"></i>
                             <i class="fa fa-twitter"></i>
-                            <i"></i>
+                  
                         </p>
                     </div>
                 </div>
