--- a/shopping.html
+++ b/shopping.html
@@ -16,50 +16,66 @@
   </body>
 </html>
 
+<nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
+  <div class="container">
+    <a class="navbar-brand" href="#">Golden Goose</a>
+    <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+      aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="d-flex justify-content-start align-items-center">
+        <i class="fas fa-bars"></i>
+      </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarExample01">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link px-3" href="index.html">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link px-3" href="aboutus.html">about us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link px-3" href="data.html">data</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link px-3" href="product.html">product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link px-3" href="shipping.html">shipping</a>
+        </li>
+      </ul>
 
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Golden Goose</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="data.html">Data</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="product.html">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="shopping.html">Shopping</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+      <ul class="navbar-nav flex-row">
+        <li class="nav-item">
+          <a class="nav-link pe-3" href="#!">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link px-3" href="#!">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link ps-3" href="#!">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
 <div class="d-grid gap-2 col-6 mx-auto shoppingbutton">
-  <button type="button" class="btn btn-warning"
+  <button type="button" class="btn btn-light"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
   Frames
 </button>
-<button type="button" class="btn btn-warning"
+<button type="button" class="btn btn-light"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
   Shipping
 </button>
-<button type="button" class="btn btn-warning"
+<button type="button" class="btn btn-light"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
   Orders
 </button>
@@ -105,8 +121,6 @@
                             <i class="fa fa-instagram"></i>
                             <i class="fa fa-pinterest"></i>
                             <i class="fa fa-twitter"></i>
-                            <i class+ "fa fa-twitter"></i>
-                            <i"></i>
                         </p>
                     </div>
                 </div>
