--- a/data.html
+++ b/data.html
@@ -41,24 +41,35 @@
           <a class="nav-link px-3" href="product.html">product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-3" href="shipping.html">shipping</a>
+          <a class="nav-link px-3" href="shopping.html">shopping</a>
         </li>
       </ul>
 
       <ul class="navbar-nav flex-row">
         <li class="nav-item">
           <a class="nav-link pe-3" href="#!">
-            <i class="fab fa-youtube"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg" viewBox="0 0 16 16">
+              <path d="M8 15a5 5 0 0 1-5-5c0-1.956.69-4.286 1.742-6.12.524-.913 1.112-1.658 1.704-2.164C7.044 1.206 7.572 1 8 1s.956.206 1.554.716c.592.506 1.18 1.251 1.704 2.164C12.31 5.714 13 8.044 13 10a5 5 0 0 1-5 5m0 1a6 6 0 0 0 6-6c0-4.314-3-10-6-10S2 5.686 2 10a6 6 0 0 0 6 6"/>
+            </svg>
+            <i class="bi bi-egg"></i>
           </a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link px-3" href="#!">
-            <i class="fab fa-facebook-f"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg-fill" viewBox="0 0 16 16">
+              <path d="M14 10a6 6 0 0 1-12 0C2 5.686 5 0 8 0s6 5.686 6 10"/>
+            </svg>
+            <i class="bi bi-egg-fill"></i>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link ps-3" href="#!">
-            <i class="fab fa-instagram"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg-fried" viewBox="0 0 16 16">
+              <path d="M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              <path d="M13.997 5.17a5 5 0 0 0-8.101-4.09A5 5 0 0 0 1.28 9.342a5 5 0 0 0 8.336 5.109 3.5 3.5 0 0 0 5.201-4.065 3.001 3.001 0 0 0-.822-5.216zm-1-.034a1 1 0 0 0 .668.977 2.001 2.001 0 0 1 .547 3.478 1 1 0 0 0-.341 1.113 2.5 2.5 0 0 1-3.715 2.905 1 1 0 0 0-1.262.152 4 4 0 0 1-6.67-4.087 1 1 0 0 0-.2-1 4 4 0 0 1 3.693-6.61 1 1 0 0 0 .8-.2 4 4 0 0 1 6.48 3.273z"/>
+            </svg>
+            <i class=" bi bi-egg-fried"></i>
           </a>
         </li>
       </ul>
@@ -87,7 +98,7 @@
         </p>
     </div>
     <div class="col-md-8">
-        <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.jcalg_uSUFG83KWy6o37awHaHa?rs=1&pid=ImgDetMain">
+        <img class="rounded-circle" src="https://d36044308cvs0c.cloudfront.net/images/2022/11/behind-ears-patch-test.jpg">
     </div>
 </div>
 <footer>
