--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
   <div class="container">
-    <a class="navbar-brand" href="#">Golden Goose</a>
+    <a class="navbar-brand" href="index.html">Golden Goose</a>
     <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
       aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="d-flex justify-content-start align-items-center">
@@ -76,6 +76,9 @@
     </div>
   </div>
 </nav>
+<br>
+<br>
+
 
 
   <main>
@@ -83,34 +86,37 @@
       <div class="col-md-4" id="feat-3">
           <h3>Maddy Barnes</h3>
           <p>
-            We use customizable patches that go on the left or right said of your head. Our patches then connect to your hippocampus in your brain, transporting your memories straight into your frame!
+            I'm Maddy, a co-producer of the Golden Photo Frames. I helped design colors, keep the frames trendy and take pictures for our website.
           </p>
       </div>
       <div class="col-md-8">
-          <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.Y_MuxWwjYXum76f8yoySvwHaFD?rs=1&pid=ImgDetMain">
+          <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.4vV2K6I63YnRH4yv9maxOgD6D6?rs=1&pid=ImgDetMain">
       </div>
+      
       <div class="row align-items-center">
         <div class="col-md-4" id="feat-3">
             <h3>Ella Mayo</h3>
             <p>
-              We use customizable patches that go on the left or right said of your head. Our patches then connect to your hippocampus in your brain, transporting your memories straight into your frame!
+              I'm Ella Mayo and I'm one of the co-producers of Golden Photo Frames!
             </p>
         </div>
         <div class="col-md-8">
-            <img class="rounded-circle" class="bigahhhead" src="https://th.bing.com/th/id/OIP.Y_MuxWwjYXum76f8yoySvwHaFD?rs=1&pid=ImgDetMain">
+            <img class="rounded-circle"  src="https://th.bing.com/th/id/OIP.FHrr3OvctmwzaWT5eN4P2gHaGS?rs=1&pid=ImgDetMain">
         </div>
+        
   </div>
-  <br>
+  
   <div class="row align-items-center">
     <div class="col-md-4" id="feat-3">
         <h3>Alexa Mata</h3>
         <p>
-          Here at Golden Goose, we use top notch technology to give our costumers a comfortable and reliable experience with our product. Ear pieces starting at $500 without your customizations.
+          Hi, I'm Alexa, and I am one of the co-producers of the Golden Photo Frames. 
         </p>
     </div>
     <div class="col-md-8">
-        <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.jcalg_uSUFG83KWy6o37awHaHa?rs=1&pid=ImgDetMain">
+        <img class="rounded-circle" src="https://th.bing.com/th/id/OIP.-9DrYCm6uM27OHwF3IROvgHaF7?rs=1&pid=ImgDetMain">
     </div>
+  
 </div>
 <footer>
   <div class="container">
