--- a/shopping.html
+++ b/shopping.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
   <div class="container">
-    <a class="navbar-brand" href="#">Golden Goose</a>
+    <a class="navbar-brand" href="index.html">Golden Goose</a>
     <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
       aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="d-flex justify-content-start align-items-center">
@@ -79,9 +79,10 @@
 
 
 <div class="d-grid gap-2 col-6 mx-auto shoppingbutton">
-  <button type="button" class="btn btn-light"
+  <button type="button" class="btn btn-light" 
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
   Frames
+  <a class="nav-link px-3" href="product.html"></a>
 </button>
 <button type="button" class="btn btn-light"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 5rem;">
