--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffede7;">
   <div class="container">
-    <a class="navbar-brand" href="#">Golden Goose</a>
+    <a class="navbar-brand" href="index.html">Golden Goose</a>
     <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
       aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="d-flex justify-content-start align-items-center">
