--- a/product.html
+++ b/product.html
@@ -127,6 +127,7 @@
       <div class="col-md-4" id="feat-3">
           <h1 class="wow">About our product.</h1>
           <p class="wow"> The Golden Goose Gold Memory Frame is a gold picture frame that displays your memories. With our high tech technology, we made it possible to deliver your golden memories straight to the frame from your brain. Our Golden Goose apps lets you control your memories like your photo camera roll. You never have to worry about losing a memory again!
+            <button type="button" class="btn btn-light">Purchase Here!</button>
           </p>
       </div>
       <div class="col-md-8">
